This commit contains the quantities/adjective treatment

--- a/Kitchen_Expert_System.ipynb
+++ b/Kitchen_Expert_System.ipynb
@@ -165,13 +165,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "MNecofXOByy0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'logic'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# from utils import *\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlogic\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'logic'"
+          ]
+        }
+      ],
       "source": [
-        "from utils import *\n",
+        "# from utils import *\n",
         "from logic import *"
       ]
     },
@@ -183,7 +195,7 @@
       },
       "outputs": [],
       "source": [
-        "BC = FolKB()"
+        "KB = FolKB()"
       ]
     },
     {
@@ -195,27 +207,27 @@
       "outputs": [],
       "source": [
         "# Tools\n",
-        "BC.tell(expr('Tool(Pan)'))\n",
-        "BC.tell(expr('Tool(Pot)'))\n",
-        "BC.tell(expr('Tool(Grater)'))\n",
-        "BC.tell(expr('Tool(CuttingBoard)'))\n",
-        "BC.tell(expr('Tool(Mixer)'))\n",
+        "KB.tell(expr('Tool(Pan)'))\n",
+        "KB.tell(expr('Tool(Pot)'))\n",
+        "KB.tell(expr('Tool(Grater)'))\n",
+        "KB.tell(expr('Tool(CuttingBoard)'))\n",
+        "KB.tell(expr('Tool(Mixer)'))\n",
         "\n",
         "# Quantities\n",
-        "BC.tell(expr('Quantity(Few)'))\n",
-        "BC.tell(expr('Quantity(Med)'))\n",
-        "BC.tell(expr('Quantity(Much)'))\n",
+        "KB.tell(expr('Quantity(Few)'))\n",
+        "KB.tell(expr('Quantity(Med)'))\n",
+        "KB.tell(expr('Quantity(Much)'))\n",
         "\n",
         "#Ingredients\n",
         "\n",
         "\n",
         "# Rules\n",
         "    # Quantities\n",
-        "BC.tell(expr('HaveIngredient(x, Much) ==> HaveIngredient(x, Med)'))\n",
-        "BC.tell(expr('HaveIngredient(x, Med) ==> HaveIngredient(x, Few)'))\n",
+        "KB.tell(expr('HaveIngredient(x, Much) ==> HaveIngredient(x, Med)'))\n",
+        "KB.tell(expr('HaveIngredient(x, Med) ==> HaveIngredient(x, Few)'))\n",
         "\n",
         "    # Recipies\n",
-        "BC.tell(expr('HaveIngredient(Tomato, Medium) & HaveTool(Pan) & Have(Pepper, Much) ==> CanMake(Hmiss)'))  "
+        "KB.tell(expr('HaveIngredient(Tomato, Medium) & HaveTool(Pan) & Have(Pepper, Much) ==> CanMake(Hmiss)'))  "
       ]
     },
     {
@@ -228,100 +240,100 @@
       "source": [
         "#Ingredients\n",
         "\n",
-        "BC.tell(expr('Ingredient(Chicken)'))\n",
-        "BC.tell(expr('Ingredient(Rice)'))\n",
-        "BC.tell(expr('Ingredient(Broccoli)'))\n",
-        "BC.tell(expr('Ingredient(pepper)'))\n",
-        "BC.tell(expr('Ingredient(Onion)'))\n",
-        "BC.tell(expr('Ingredient(Garlic)'))\n",
-        "BC.tell(expr('Ingredient(Tomato)'))\n",
-        "BC.tell(expr('Ingredient(beef)'))\n",
-        "BC.tell(expr('Ingredient(Pasta)'))\n",
-        "BC.tell(expr('Ingredient(Cheese)'))\n",
+        "KB.tell(expr('Ingredient(Chicken)'))\n",
+        "KB.tell(expr('Ingredient(Rice)'))\n",
+        "KB.tell(expr('Ingredient(Broccoli)'))\n",
+        "KB.tell(expr('Ingredient(pepper)'))\n",
+        "KB.tell(expr('Ingredient(Onion)'))\n",
+        "KB.tell(expr('Ingredient(Garlic)'))\n",
+        "KB.tell(expr('Ingredient(Tomato)'))\n",
+        "KB.tell(expr('Ingredient(beef)'))\n",
+        "KB.tell(expr('Ingredient(Pasta)'))\n",
+        "KB.tell(expr('Ingredient(Cheese)'))\n",
         "\n",
         "\n",
         "#Queries\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Chicken_and_broccoli_stir_fry)'))\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Chicken_and_broccoli_stir_fry)'))\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Med) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Beef_and_broccoli_stir_fry)'))\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "BC.tell(expr('HaveIngredient(Rice, Much) & HaveIngredient(Broccoli, Few) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Cheesy_broccoli_and_rice_casserole)'))\n",
+        "KB.tell(expr('HaveIngredient(Beef, Med) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Beef_and_broccoli_stir_fry)'))\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Rice, Much) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Chicken_and_rice_casserole)'))\n",
-        "\n",
-        "\n",
-        "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Few) & HaveIngredient(Pepper, Med) & HaveIngredient(Rice, Much) & HaveIngredient(Cheese, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Stuffed_peppers)'))\n",
+        "KB.tell(expr('HaveIngredient(Rice, Much) & HaveIngredient(Broccoli, Few) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Cheesy_broccoli_and_rice_casserole)'))\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Few) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Pepper, Few) & HaveIngredient(Garlic, Few) & HaveIngredient(Tomato, Med) & HaveTool(Pot) ==> CanCook(Chicken_and_vegetable_soup)'))\n",
-        "\n",
-        "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Few) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Pepper, Few) & HaveIngredient(Garlic, Few) & HaveIngredient(Tomato, Med) & HaveTool(Pot)  ==> CanCook(Beef_and_vegetable_soup)'))\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Rice, Much) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Chicken_and_rice_casserole)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Pasta, Much) & HaveIngredient(Tomato, Med) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Cheesy_pasta_bake)'))\n",
+        "KB.tell(expr('HaveIngredient(Beef, Few) & HaveIngredient(Pepper, Med) & HaveIngredient(Rice, Much) & HaveIngredient(Cheese, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Stuffed_peppers)'))\n",
         "\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Much) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Med) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Beef_and_onion_stir_fry)'))\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Few) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Pepper, Few) & HaveIngredient(Garlic, Few) & HaveIngredient(Tomato, Med) & HaveTool(Pot) ==> CanCook(Chicken_and_vegetable_soup)'))\n",
+        "\n",
+        "\n",
+        "KB.tell(expr('HaveIngredient(Beef, Few) & HaveIngredient(Broccoli, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Pepper, Few) & HaveIngredient(Garlic, Few) & HaveIngredient(Tomato, Med) & HaveTool(Pot)  ==> CanCook(Beef_and_vegetable_soup)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Much) & HaveIngredient(Pasta, Much) & HaveIngredient(Cheese, Med) & HaveTool(Oven) ==> CanCook(Cheesy_Chicken_pasta)'))\n",
+        "KB.tell(expr('HaveIngredient(Pasta, Much) & HaveIngredient(Tomato, Med) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Cheesy_pasta_bake)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Much) & HaveIngredient(peeper, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Chicken_fajitas)'))\n",
+        "\n",
+        "KB.tell(expr('HaveIngredient(Beef, Much) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Med) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Beef_and_onion_stir_fry)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Much) & HaveIngredient(Tomato, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Beef_tacos)'))\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Much) & HaveIngredient(Pasta, Much) & HaveIngredient(Cheese, Med) & HaveTool(Oven) ==> CanCook(Cheesy_Chicken_pasta)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Rice, Much) & HaveIngredient(Tomato, Med) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Cheesy_tomato_and_rice_casserole)'))\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Much) & HaveIngredient(peeper, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Chicken_fajitas)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Broccoli, Much) & HaveIngredient(chesse, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & HaveTool(Pot) ==> CanCook(Broccoli_and_cheese_soup)'))\n",
+        "KB.tell(expr('HaveIngredient(Beef, Much) & HaveIngredient(Tomato, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Oven) ) ==> CanCook(Beef_tacos)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Pasta, Much) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Chicken_alfredo_pasta)'))\n",
+        "KB.tell(expr('HaveIngredient(Rice, Much) & HaveIngredient(Tomato, Med) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Cheesy_tomato_and_rice_casserole)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Much) & HaveIngredient(Broccoli, Much) & HaveIngredient(Cheese, Med) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Beef_and_broccoli_casserole)'))\n",
+        "KB.tell(expr('HaveIngredient(Broccoli, Much) & HaveIngredient(chesse, Med) & HaveIngredient(Onion, Few) & HaveIngredient(Garlic, Few) & HaveTool(Pot) ==> CanCook(Broccoli_and_cheese_soup)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Garlic, Few) & HaveIngredient(Cheese, Med) & HaveTool(Pan) ==> CanCook(Cheesy_garlic_bread)'))\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Pasta, Much) & HaveIngredient(Cheese, Med) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Chicken_alfredo_pasta)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Tomato, Med) & HaveIngredient(Cheese, Much) & HaveTool(Pan) ==> CanCook(Tomato_and_cheese_omelet)'))\n",
+        "KB.tell(expr('HaveIngredient(Beef, Much) & HaveIngredient(Broccoli, Much) & HaveIngredient(Cheese, Med) & HaveIngredient(Garlic, Few) & ( HaveTool(Pan) / HaveTool(Pot) ) ==> CanCook(Beef_and_broccoli_casserole)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Beef, Med) & HaveIngredient(Cheese, Much) & HaveIngredient(Onion, Med) & HaveIngredient(Garlic, Few) & HaveTool(Oven) ==> CanCook(Beef_and_cheese_quesadillas)'))\n",
+        "KB.tell(expr('HaveIngredient(Garlic, Few) & HaveIngredient(Cheese, Med) & HaveTool(Pan) ==> CanCook(Cheesy_garlic_bread)'))\n",
         "\n",
         "\n",
         "\n",
-        "BC.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Cheese, Much) & HaveIngredient(Onion, Med) & HaveIngredient(Pepper, Few) & HaveTool(Oven) ==> CanCook(Chicken_and_cheese_quesadillas)'))\n"
+        "KB.tell(expr('HaveIngredient(Tomato, Med) & HaveIngredient(Cheese, Much) & HaveTool(Pan) ==> CanCook(Tomato_and_cheese_omelet)'))\n",
+        "\n",
+        "\n",
+        "\n",
+        "KB.tell(expr('HaveIngredient(Beef, Med) & HaveIngredient(Cheese, Much) & HaveIngredient(Onion, Med) & HaveIngredient(Garlic, Few) & HaveTool(Oven) ==> CanCook(Beef_and_cheese_quesadillas)'))\n",
+        "\n",
+        "\n",
+        "\n",
+        "KB.tell(expr('HaveIngredient(Chicken, Med) & HaveIngredient(Cheese, Much) & HaveIngredient(Onion, Med) & HaveIngredient(Pepper, Few) & HaveTool(Oven) ==> CanCook(Chicken_and_cheese_quesadillas)'))\n"
       ]
     }
   ],
