this commit contains the bc/fc functions

--- a/Kitchen_Expert_System.ipynb
+++ b/Kitchen_Expert_System.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -195,6 +196,7 @@
       },
       "outputs": [],
       "source": [
+        "global KB \n",
         "KB = FolKB()"
       ]
     },
